<resources>
    <string name="app_name">FileStorage</string>
    <string name="title">File Storage</string>
    <string name="filename"> File Name</string>
    <string name="file_content">File Content</string>
    <string name="save">Save</string>
    <string name="write_file_to_internal_storage">Write File to Internal Storage</string>
    <string name="read_file_from_internal_storage">Read File from Internal Storage</string>
    <string name="write_file_to_external_storage">Write File to External Storage</string>
    <string name="read_file_from_external_storage">Read File from External Storage</string>
    <!-- Titulos de las activities -->
    <string name="title_activity_write_to_internal_storage">Write To Internal Storage</string>
    <string name="title_activity_read_from_internal_storage">Read From Internal Storage</string>
    <string name="title_activity_write_to_external_storage">Write To External Storage</string>
    <string name="title_activity_read_from_external_storage">Read From External Storage</string>
    <string name="file_not_found">File not found</string>
    <string name="error_writing_file">Error ocurred in writing File</string>
    <string name="error_when_close_stream">Error ocurred when close Stream</string>
    <string name="success_write_internal_memory">File Written to internal memory</string>
    <string name="written_external_storage">File Written to external memory</string>
    <string name="threads">Threads</string>
    <string name="save_and_read_data_in_cache">save and read data in cache</string>
    <string name="file_saved_in_cache">File Saved in Cache</string>
    <string name="save_file_in_cache">Save File in Cache</string>
    <string name="save_data">Save Data</string>
    <string name="enter_data">Enter Data</string>
    <string name="show_data">Show Data</string>
    <string name="saved_data">Saved Data</string>
    <string name="show">Show</string>
    <string name="save_and_read_from_sqllite">Save and Read from SQLLite</string>
</resources>
