<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rodrigovazquez.filestorage.Activities.StoringDataInCache">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/save_file_in_cache"
        android:textSize="22dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtEnterData"
        android:layout_width="209dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_data"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnSaveData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEnterData" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_data"
        android:textStyle="bold"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveData"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtLoadData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="18dp"
        android:inputType="textPersonName"
        android:hint="@string/saved_data"
        android:layout_marginTop="61dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveData"
        app:layout_constraintLeft_toRightOf="@+id/btnSaveData"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btnShowData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLoadData"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
