<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rodrigovazquez.filestorage.Activities.SQLStorage">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SqlLite Storage"
        android:textSize="20dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="52dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_data"
        android:textStyle="bold"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/edtEnterData"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edtEnterData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enter_data"
        android:layout_marginTop="53dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_data"
        android:textStyle="bold"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtShowData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_data"
        android:textSize="20dp"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:layout_marginLeft="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>
